faster css, no zoomer, three column site, sort users by rep,

--- a/client/cloud.jade
+++ b/client/cloud.jade
@@ -4,7 +4,7 @@ template(name='cloud')
         //-     i.search.icon
         //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
         // .ui.hidden.fitted.divider
-    i.grey.tags.icon
+    // i.grey.tags.icon
     if selected_tags
         #clear_tags.ui.active.icon.compact.button
             i.remove.icon
@@ -12,7 +12,7 @@ template(name='cloud')
             .unselect_tag.ui.active.compact.button
                 strong #{this}
     each all_tags
-        .ui.compact.button.select_tag(class=cloud_tag_class) 
+        .ui.compact.circular.basic.button.select_tag(class=cloud_tag_class) 
             strong #{this.name}
 
 
