wider question view in site, fix get_question method to get body

--- a/client/question.jade
+++ b/client/question.jade
@@ -9,7 +9,7 @@ template(name='stack_page')
                             img.ui.invert.mini.inline.image(src=watson.metadata.image)    
                         | #{site}
                 .twelve.wide.center.aligned.column
-                    .ui.header.speak_this
+                    .ui.header.speak_this.get_question
                         |!{title}
             .row
                 .four.wide.column.scrolling
