--- a/client/question.jade
+++ b/client/question.jade
@@ -14,6 +14,7 @@ template(name='stack_page')
             .row
                 .four.wide.column.scrolling
                     +doc_emotion
+                    +watson_full
                     // i.big.refresh.circular.link.icon.get_question
                     // i.big.exclamation.circular.link.icon.get_answers
                     // +skve k='stack_section' v='main' l='content' i='content' 
@@ -58,7 +59,8 @@ template(name='stack_page')
                 .nine.wide.column.scrolling
                     // div(class=currentUser.invert_class)
                     .f11.speak_this !{body}
-                    .ui.dividing.header.get_question_comments
+                    .ui.small.grey.header.get_question_comments
+                        i.chat.outline.icon
                         |comments
                     each question_comments
                         .ui.segment
@@ -73,13 +75,13 @@ template(name='stack_page')
                                 a.ui.inline.header(href="/site/#{current_doc.site}/user/#{user_id}")
                                     img.ui.avatar.invert.image(src=profile_image)
                                     |!{display_name}
-                                |rep:#{reputation}
-                                |#{user_id}
-                                |#{user_type}
-                                |#{accept_rate}
+                                    |#{reputation}
+                                .ui.basic.small.label #{user_id}
+                                .ui.basic.small.label #{user_type}
+                                .ui.basic.small.label #{accept_rate}
                                 a(href=link) #{link}
                             
-                            |#{content_license}
+                            small #{content_license}
                             // +voting
                             // +comments
                     
@@ -140,12 +142,16 @@ template(name='stack_page')
                                 .ui.basic.label type #{user_type}
                                 // a.ui.circular.icon.button(href=link)
                                 //     i.large.external.icon
-                    .ui.header.get_linked linked
+                    .ui.grey.small.header.get_linked 
+                        i.linkify.icon
+                        |linked
                     each linked_question_ids
                         .ui.header #{this}
                     each linked_questions
                         .ui.header hi #{title}
-                    .ui.header.get_related related
+                    .ui.grey.small.header.get_related
+                        i.fork.icon
+                        |related
                     each related_question_ids
                         .ui.header #{this}
                     each related_questions
