--- a/client/s.css
+++ b/client/s.css
@@ -359,9 +359,9 @@ a.goto_article {
     cursor: pointer !important;
     /* color: black !important; */
     /* font-size: 130% !important; */
-    /*zoom: 105% !important;*/
+    zoom: 105% !important;
     /* padding-top: 5em !important; */
-    /*transform: scale(1.) !important;*/
+    transform: scale(1.) !important;
     z-index: 1000 !important;
     /*text-shadow: 0 20px 20px 20px rgba(50, 50, 100, 0.1) !important; */
     /*text-shadow: 0 0 3px grey !important;*/
@@ -371,7 +371,7 @@ a.goto_article {
 .zoomer:hover {
     transition: all .1s ease !important; 
     z-index: -1000 !important;
-    /*transform: scale(1.01) !important;*/
+    transform: scale(1.1) !important;
 }
 /*img.zoomer:hover {*/
 /*    transition: all .2s ease !important; */
