--- a/client/user.jade
+++ b/client/user.jade
@@ -1,7 +1,7 @@
 template(name='stackuser_page')
     unless stackuser_doc
         // .ui.header no user found
-        .ui.massive.fluid.segment.search 
+        .ui.massive.fluid.segment.zoomer.pointer.search 
             i.download.icon
             |download user info
     with stackuser_doc
