--- a/client/question.jade
+++ b/client/question.jade
@@ -9,7 +9,7 @@ template(name='stack_page')
                             img.ui.invert.mini.inline.image(src=watson.metadata.image)    
                         | #{site}
                 .twelve.wide.center.aligned.column
-                    .ui.header.speak_this.get_question
+                    .ui.header.say_title.get_question
                         |!{title}
             .row
                 .four.wide.column.scrolling
@@ -41,12 +41,12 @@ template(name='stack_page')
                     .ui.list
                         .item #{view_count} views
                         .item id #{_id}
-                        .item protected_date #{protected_date}
-                        .item accepted_answer_id #{accepted_answer_id}
+                        .item date protected {{ufrom protected_date}}
+                        .item accepted answer id #{accepted_answer_id}
                         .item #{answer_count} answers
                         .item score #{score}
                         .item qid #{question_id}
-                        .item last active {{ufrom last_activity_date}}
+                        .item active {{ufrom last_activity_date}}
                         .item created {{ufrom creation_date}}
                         .item imported #{_when}
                         .item license #{content_license}
@@ -73,7 +73,7 @@ template(name='stack_page')
                             with owner
                                 .ui.divider
                                 i.chat.icon
-                                a.ui.inline.header(href="/site/#{current_doc.site}/user/#{user_id}")
+                                a.ui.inline.header.say_name(href="/site/#{current_doc.site}/user/#{user_id}")
                                     img.ui.avatar.invert.image(src=profile_image)
                                     |!{display_name}
                                     |#{reputation}
@@ -108,7 +108,7 @@ template(name='stack_page')
 
                             with owner
                                 div
-                                a.ui.header(href="/site/#{current_doc.site}/user/#{user_id}")
+                                a.ui.header.say_name(href="/site/#{current_doc.site}/user/#{user_id}")
                                     img.ui.avatar.invert.image(src=profile_image)
                                     |!{display_name}
                                 |#{reputation}
@@ -141,7 +141,7 @@ template(name='stack_page')
                     +comments
                 .three.wide.column
                     with owner
-                        a.ui.fluid.card(href="/site/#{current_doc.site}/user/#{user_id}")
+                        a.ui.fluid.card.say_name(href="/site/#{current_doc.site}/user/#{user_id}")
                             img.ui.rounded.image(src=profile_image)
                             .content
                                 .ui.header #{display_name}
