--- a/client/question.jade
+++ b/client/question.jade
@@ -51,17 +51,17 @@ template(name='stack_page')
                         i.eye.icon
                         |#{view_count}
                     .ui.list
-                        .item #{view_count} views
-                        .item id #{_id}
-                        .item date protected {{ufrom protected_date}}
-                        .item accepted answer id #{accepted_answer_id}
-                        .item #{answer_count} answers
-                        .item score #{score}
-                        .item qid #{question_id}
-                        .item active {{ufrom last_activity_date}}
-                        .item created {{ufrom creation_date}}
-                        .item imported #{_when}
-                        .item license #{content_license}
+                        .item.zoomer #{view_count} views
+                        .item.zoomer id #{_id}
+                        .item.zoomer date protected {{ufrom protected_date}}
+                        .item.zoomer accepted answer id #{accepted_answer_id}
+                        .item.zoomer #{answer_count} answers
+                        .item.zoomer score #{score}
+                        .item.zoomer qid #{question_id}
+                        .item.zoomer active {{ufrom last_activity_date}}
+                        .item.zoomer created {{ufrom creation_date}}
+                        .item.zoomer imported #{_when}
+                        .item.zoomer license #{content_license}
                         
                     // +bookmark_button
                     // +voting
@@ -71,21 +71,21 @@ template(name='stack_page')
                 .twelve.wide.column.scrolling
                     // div(class=currentUser.invert_class)
                     .ui.green.segment.speak_this
-                        .f11.speak_body !{body}
+                        .f11.speak_body.zoomer !{body}
                     .ui.small.grey.header.get_question_comments
                         i.chat.outline.icon
                         // |comments
                     each question_comments
                         .ui.segment
                             if is_accepted 
-                                .ui.invert.inverted.green.label 
+                                .ui.green.label.zoomer
                                     |accepted
                             // div(class=currentUser.invert_class)
-                            .f11.speak_body !{body}
+                            .f11.speak_body.zoomer !{body}
                             with owner
                                 .ui.divider
                                 i.chat.icon
-                                a.ui.inline.header.say_name(href="/site/#{current_doc.site}/user/#{user_id}")
+                                a.ui.inline.header.say_name.zoomer(href="/site/#{current_doc.site}/user/#{user_id}")
                                     img.ui.avatar.invert.image(src=profile_image)
                                     |!{display_name}
                                     |#{reputation}
@@ -102,10 +102,10 @@ template(name='stack_page')
                     each question_answers
                         .ui.segment(class=answer_class)
                             if is_accepted 
-                                .ui.inverted.green.corner.attached.label 
+                                .ui.green.corner.attached.label.zoomer
                                     i.checkmark.icon
                             // div(class=currentUser.invert_class)
-                            .f11.speak_body !{body}
+                            .f11.speak_body.zoomer !{body}
                             .ui.divider
                             .ui.horizontal.list
                                 .item 
@@ -120,7 +120,7 @@ template(name='stack_page')
 
                             with owner
                                 div
-                                a.ui.header.say_name(href="/site/#{current_doc.site}/user/#{user_id}")
+                                a.ui.header.say_name.zoomer(href="/site/#{current_doc.site}/user/#{user_id}")
                                     img.ui.avatar.invert.image(src=profile_image)
                                     |!{display_name}
                                 |#{reputation}
