--- a/client/site.jade
+++ b/client/site.jade
@@ -154,7 +154,7 @@ template(name='stack_tag_selector')
     a.ui.zoomer.tertiary.large.button.zoomer.select_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.zoomer(src=term.watson.metadata.image )    
+                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
         | #{name}
         // small #{count}
 
