--- a/client/dao.jade
+++ b/client/dao.jade
@@ -354,7 +354,7 @@ template(name='convert')
 template(name='unselect_tag')
     a.unselect_tag.ui.black.big.tertiary.button.select_term(href='#')
         if term
-            img.ui.avatar.compact.image(src=term.watson.metadata.image)    
+            img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
         strong #{this}
 
 template(name='tag_selector')
