trans comment more, superzoom avatar selector

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -132,7 +132,7 @@ template(name='comments')
     // a.icon.item(data-tab='info') 
     //     i.large.info.icon
     // .ui.bottom.attached.tab.segment.bottom_rounded.active(data-tab='first')
-    .ui.fluid.icon.large.input
+    .ui.inline.icon.transparent.input
         i.chat.icon
         input.add_comment(type='text' placeholder='comment')
     if currentUser
