--- a/client/cloud.jade
+++ b/client/cloud.jade
@@ -6,10 +6,10 @@ template(name='cloud')
         // .ui.hidden.fitted.divider
     // i.grey.tags.icon
     if selected_tags
-        #clear_tags.ui.active.icon.compact.button
+        #clear_tags.ui.active.icon.zoomer.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.active.compact.button
+            .unselect_tag.ui.active.zoomer.button
                 strong #{this}
     each all_tags
         .ui.compact.circular.basic.button.select_tag(class=cloud_tag_class) 
