--- a/client/user.jade
+++ b/client/user.jade
@@ -136,7 +136,7 @@ template(name='stackuser_page')
                     .ui.list
                         each user_comments
                             .item #{title}
-                            
+                    +comments        
                             
                             
 template(name='answer_item')
