more users facet tags, scrolling users leftbar

--- a/client/users.jade
+++ b/client/users.jade
@@ -1,6 +1,6 @@
 template(name='users')
     .ui.stackable.padded.grid
-        .four.wide.column
+        .four.wide.column.scrolling
             .ui.header
                 i.users.icon
                 |users
